# MASKIT-pub

./: .env.example  .gitignore  AUTHENTICATION_SETUP.md  CHANGES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  QUICK_START.md  README.md  SYSTEM_ARCHITECTURE.md  package.json  restart_server.sh  test_approver_review.html  test_auth_flow.py  test_email_rag.json  test_full_flow.sh  test_smtp.py  test_smtp_simple.py
backend/app/rag/: STREAMLIT_QUICKSTART.md  benchmark_llm.py  benchmark_results.csv  main.py  main_agent.py  pyproject.toml  requirements.txt  run_streamlit.sh  test.py  test_llm_providers.py
backend/app/rag/agent/: graph.py  llm_factory.py  nodes.py  retrievers.py  state.py
backend/app/rag/api/: main.py  models.py
backend/app/rag/schemas/: A_cases.schema.json  B_policies.schema.json  C_laws.schema.json  TaskProfile.schema.json  application_guide.schema.json  common.json  decision.schema.json
backend/app/rag/scripts/: llm_client.py  llm_taskprofile.py  schema_utils.py
backend/app/rag/scripts/data_processing/: hierarchical_chunking.py
backend/app/rag/scripts/decision/: decision_engine.py  rules_engine.py  signal_extractor.py
backend/app/rag/scripts/guidelines/: BATCH_PROCESSING_GUIDE.md  QUICKSTART.md  README.md  batch_process_raw_pdfs.py  build_guides_vectordb.py  process_guidelines.py  process_guidelines_optimized.py  run_batch_processing.sh  run_pipeline.sh  test_single_pdf.sh  validate_and_dedup.py
backend/app/rag/scripts/hybrid/: build_bm25.py  build_chromadb.py  prepare_data.py  retriever.py
backend/app/rag/streamlit_app/: Home.py  README.md
(+266 files in other folders)
